@@ -1,41 +1,31 @@
 package loom.fabric;
 
-import net.fabricmc.loader.impl.FormattedException;
 import net.fabricmc.loader.impl.game.GameProvider;
 import net.fabricmc.loader.impl.game.GameProviderHelper;
 import net.fabricmc.loader.impl.game.patch.GameTransformer;
 import net.fabricmc.loader.impl.launch.FabricLauncher;
 import net.fabricmc.loader.impl.metadata.BuiltinModMetadata;
-import net.fabricmc.loader.impl.metadata.ContactInformationImpl;
 import net.fabricmc.loader.impl.util.Arguments;
 import net.fabricmc.loader.impl.util.SystemProperties;
-import net.fabricmc.loader.impl.util.log.Log;
-import net.fabricmc.loader.impl.util.log.LogCategory;
-import net.fabricmc.loader.impl.util.log.LogLevel;
-import net.fabricmc.loader.impl.util.version.StringVersion;
 
-import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
+import java.net.URISyntaxException;
+import java.nio.file.*;
 import java.util.*;
-import java.util.zip.ZipFile;
 
 public class EquilinoxGameProvider implements GameProvider {
-    public static final String ENTRY_POINT = "main.MainApp", API = "loom-api-0.1.0.jar";
+    private final GameTransformer transformer = new GameTransformer();
+
+    private List<Path> classpath;
 
     private Arguments arguments;
 
-    private Path gameJar;
+    public String entry;
 
-    String entrypoint;
-
-    private static final StringVersion gameVersion = new StringVersion("1.0.0");
-    private static final GameTransformer TRANSFORMER = new GameTransformer(new EquilinoxEntryPointPatch());
+    private String version;
 
     @Override
     public String getGameId() {
@@ -49,43 +39,33 @@ public class EquilinoxGameProvider implements GameProvider {
 
     @Override
     public String getRawGameVersion() {
-        return gameVersion.getFriendlyString();
+        return version;
     }
 
     @Override
     public String getNormalizedGameVersion() {
-        return gameVersion.getFriendlyString();
+        return version;
     }
 
     @Override
     public Collection<BuiltinMod> getBuiltinMods() {
-        Map<String, String> contactInfo = new HashMap<>();
-        contactInfo.put("github", "https://github.com/EquilinoxLoom/Loom");
-
-        BuiltinModMetadata.Builder equilinoxMetadata =
-                new BuiltinModMetadata.Builder(getGameId(), getNormalizedGameVersion())
-                        .setName(getGameName())
-                        .addAuthor("Sandáliaball", contactInfo)
-                        .setContact(new ContactInformationImpl(contactInfo))
-                        .setDescription("A sandbox evolution game.");
-
-        List<Path> mods = new ArrayList<>();
-        mods.add(gameJar); mods.add(Paths.get(".", API));
-
-        return Collections.singletonList(new BuiltinMod(mods, equilinoxMetadata.build()));
+        return List.of(new BuiltinMod(
+                classpath, new BuiltinModMetadata.Builder(getGameId(), getNormalizedGameVersion())
+                        .setName(getGameName()).setDescription("A sandbox evolution game.").build()));
     }
 
     @Override
     public String getEntrypoint() {
-        return entrypoint;
+        return entry;
     }
 
     @Override
     public Path getLaunchDirectory() {
-        if (arguments == null) {
-            return Paths.get(".");
+        try {
+            return Paths.get(".").toRealPath();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
-        return getLaunchDirectory(arguments);
     }
 
     @Override
@@ -105,96 +85,74 @@ public class EquilinoxGameProvider implements GameProvider {
 
     @Override
     public boolean locateGame(FabricLauncher launcher, String[] args) {
-        this.arguments = new Arguments();
-        this.arguments.parse(args);
+        arguments = new Arguments();
+        arguments.parse(args);
 
-        Map<Path, ZipFile> zipFiles = new HashMap<>();
+        entry = "main.MainApp";
+        version = "0.0.0";
+
+        Path launchDir = getLaunchDirectory();
 
         try {
-            GameProviderHelper.FindResult result = null;
+            GameProviderHelper.FindResult result;
 
             List<String> gameLocations = new ArrayList<>();
             if (System.getProperty(SystemProperties.GAME_JAR_PATH) != null) {
                 gameLocations.add(System.getProperty(SystemProperties.GAME_JAR_PATH));
             }
-            gameLocations.add("./input.jar");
-            gameLocations.add("./EquilinoxWindows.jar");
-            gameLocations.add("./EquilinoxLinux.jar");
+            gameLocations.add(launchDir.resolve("input.jar").toString());
+            gameLocations.add(launchDir.resolve("EquilinoxWindows.jar").toString());
+            gameLocations.add(launchDir.resolve("EquilinoxLinux.jar").toString());
 
             List<Path> jarPaths = gameLocations.stream()
                     .map(path -> Paths.get(path).toAbsolutePath().normalize())
                     .filter(Files::exists).toList();
 
-            result = GameProviderHelper.findFirst(jarPaths, zipFiles, true, ENTRY_POINT);
-
+            result = GameProviderHelper.findFirst(jarPaths, new HashMap<>(), true, entry);
             if (result == null) return false;
 
-            entrypoint = result.name;
-            gameJar = result.path;
+            classpath = List.of(result.path);
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
 
-        String os = System.getProperty("os.name").toLowerCase();
-        File natives = new File("./natives");
-        if (os.contains("win")) {
-            if (natives.mkdir()) Log.log(LogLevel.INFO, LogCategory.GAME_PROVIDER, "Created natives folder");
-            extract(natives, "jinput-dx8.dll", "jinput-dx8_64.dll", "jinput-raw.dll", "jinput-raw_64.dll",
-                    "lwjgl.dll", "lwjgl64.dll", "OpenAL32.dll", "OpenAL64.dll");
-        } else if (os.contains("mac")) {
-            if (natives.mkdir()) Log.log(LogLevel.INFO, LogCategory.GAME_PROVIDER, "Created natives folder");
-            extract(natives, "libjinput-osx.dylib", "liblwjgl.dylib", "openal.dylib");
-        }
-
-        System.setProperty("org.lwjgl.librarypath", natives.getAbsolutePath());
-
-        extract(natives, API);
-
-        processArgumentMap(arguments);
-
         return true;
-    }
-
-    private void extract(File folder, String... names) {
-        for (String name : names) {
-            try {
-                File file = new File(folder, name);
-                if (!file.exists()) {
-                    InputStream resource = getClass().getResourceAsStream(name);
-                    if (resource == null) break;
-                    Files.copy(resource, file.getAbsoluteFile().toPath());
-                }
-            } catch (IOException e) {
-                Log.warn(LogCategory.GAME_PROVIDER, "Failed to extract native " + name);
-            }
-        }
     }
 
     @Override
     public void initialize(FabricLauncher launcher) {
-        TRANSFORMER.locateEntrypoints(launcher, Collections.singletonList(gameJar));
+        try {
+            launcher.setValidParentClassPath(Collections.singletonList(Path.of(this.getClass().getProtectionDomain().getCodeSource().getLocation().toURI())));
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
+        }
+        transformer.locateEntrypoints(launcher, classpath);
     }
 
     @Override
     public GameTransformer getEntrypointTransformer() {
-        return TRANSFORMER;
+        return transformer;
     }
 
     @Override
     public void unlockClassPath(FabricLauncher launcher) {
-        launcher.addToClassPath(gameJar);
+        classpath.forEach(launcher::addToClassPath);
     }
 
     @Override
     public void launch(ClassLoader loader) {
+        MethodHandle invoker;
         try {
-            Class<?> c = loader.loadClass(entrypoint);
-            Method m = c.getMethod("main", String[].class);
-            m.invoke(null, (Object) arguments.toArray());
-        } catch (InvocationTargetException e) {
-            throw new FormattedException("Equilinox has crashed!", e.getCause());
-        } catch (ReflectiveOperationException e) {
-            throw new FormattedException("Failed to start Equilinox", e);
+            Class<?> target = loader.loadClass(getEntrypoint());
+            invoker = MethodHandles.lookup().findStatic(target, "main", MethodType.methodType(void.class, String[].class));
+        } catch (ClassNotFoundException | NoSuchMethodException | IllegalAccessException e) {
+            throw new RuntimeException("Failed to find entry point", e);
+        }
+
+        try {
+            invoker.invokeExact(arguments.toArray());
+        } catch(Throwable e) {
+            throw new RuntimeException("Failed to launch", e);
         }
     }
 
@@ -205,31 +163,6 @@ public class EquilinoxGameProvider implements GameProvider {
 
     @Override
     public String[] getLaunchArguments(boolean sanitize) {
-        if (arguments == null) return new String[0];
-
-        String[] ret = arguments.toArray();
-        if (!sanitize) return ret;
-
-        int writeIdx = 0;
-
-        for (int i = 0; i < ret.length; i++) {
-            ret[writeIdx++] = ret[i];
-        }
-
-        if (writeIdx < ret.length) ret = Arrays.copyOf(ret, writeIdx);
-
-        return ret;
-    }
-
-    private void processArgumentMap(Arguments arguments) {
-        if (!arguments.containsKey("gameDir")) {
-            arguments.put("gameDir", getLaunchDirectory(arguments).toAbsolutePath().normalize().toString());
-        }
-
-        Log.debug(LogCategory.GAME_PROVIDER, "Launch directory is " + Paths.get(arguments.get("gameDir")));
-    }
-
-    private static Path getLaunchDirectory(Arguments arguments) {
-        return Paths.get(arguments.getOrDefault("gameDir", "."));
+        return arguments.toArray();
     }
 }
